--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "cloudprint",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://anmoll05.github.io/cloudprint",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.5.2",
     "react-background-image-loader": "0.0.5",
     "react-dom": "^16.5.2",
     "react-images-upload": "^1.2.3",
+    "react-instantsearch-dom": "^5.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-search-box": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy":"npm run build",   
+    "deploy":"gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
